--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Roleta da Mari 🎁</title>
+    <title>Roleta do Meu Solzinho 🎁</title>
   </head>
   <body>
     <noscript>Você precisa habilitar o JavaScript para executar este app.</noscript>
