--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
   <body>
     <noscript>Você precisa habilitar o JavaScript para executar este app.</noscript>
     <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
