--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ec4899" />
-    <meta
-      name="description"
-      content="Roleta de presentes para a Mari"
-    />
+    <meta name="description" content="Roleta de presentes para a Mari" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
     <title>Roleta do Meu Solzinho 🎁</title>
